<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:focusedByDefault="false"
android:focusableInTouchMode="true"
android:orientation="vertical"
android:id="@+id/cart_layout_frame"
tools:context=".Fragments.Offline_order_customerdetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/next"
        android:layout_marginBottom="3dp"
        android:id="@+id/frame2">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/offline_toolbar1"
        android:layout_height="45dp"
        app:titleTextColor="@color/Titel"
        android:theme="@style/Toolbar_Arrow"
        app:title="@string/enter_custo"
        android:textAlignment="center"
        app:titleTextAppearance="@color/Titel"
        android:background="@color/Text">

    </android.support.v7.widget.Toolbar>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:layout_above="@+id/next"
    android:focusedByDefault="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cart_frame"
        android:focusedByDefault="false"
        android:padding="15dp"
        android:focusableInTouchMode="true"
        android:id="@+id/activivy_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">


            <TextView
                android:id="@+id/customer_nu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:layout_marginBottom="4dp"
                android:text="@string/customer_nu"
                android:textAppearance="@style/customer_nu"
                android:gravity="top"
                />



            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:id="@+id/cust_no"
                android:layout_height="40dp"
                android:paddingLeft="4dp"
                android:layout_weight="2"
                android:background="@drawable/light_blue_background"
                android:inputType="number"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">


            <TextView
                android:id="@+id/customer_na"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:layout_marginBottom="4dp"
                android:text="@string/customer_na"
                android:textAppearance="@style/customer_nu"
                android:gravity="top"
                />


            <EditText
                android:id="@+id/cust_name"
                android:layout_width="match_parent"
                android:background="@drawable/light_blue_background"
                android:layout_height="40dp"
                android:gravity="center|start"
                android:paddingLeft="5dp"
                android:maxLines="1"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:textColor="#000"
                android:textSize="16sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:layout_marginBottom="4dp"

                android:text="@string/customer_em"
                android:textAppearance="@style/customer_nu"
                android:gravity="top"
                />

            <EditText
                android:id="@+id/cust_email"
                android:layout_width="match_parent"
                android:background="@drawable/light_blue_background"
                android:layout_height="40dp"
                android:gravity="center|start"
                android:paddingLeft="5dp"
                android:maxLines="1"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:textColor="#000"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_nam"
                android:textStyle="italic"
                android:layout_marginBottom="4dp"
                android:textAppearance="@style/customer_nu"
                android:gravity="top"
                />

            <EditText
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:background="@drawable/light_blue_background"
                android:layout_height="40dp"
                android:gravity="center|start"
                android:paddingLeft="5dp"
                android:maxLines="1"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:textColor="#000"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gstin"
                android:textStyle="italic"
                android:layout_marginBottom="4dp"
                android:textAppearance="@style/customer_nu"
                android:gravity="top"
                />

            <EditText
                android:id="@+id/gstn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/light_blue_background"
                android:gravity="center|start"
                android:paddingLeft="5dp"
                android:maxLines="1"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:textColor="#000"
                android:textSize="16sp" />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_marginBottom="4dp"
                android:textStyle="italic"
                android:textAppearance="@style/customer_nu"
                android:gravity="top"
                />


            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:background="@drawable/light_blue_background"
                android:layout_height="60dp"
                android:gravity="start"
                android:paddingLeft="5dp"
                android:scrollHorizontally="true"
                android:textColor="#000"
                android:textSize="16sp" />



        </LinearLayout>


    </LinearLayout>


</ScrollView>
    </LinearLayout>
<Button
    android:id="@+id/next"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:textColor="@color/white"
    android:background="@color/whish"
    android:hint="PLACE ORDER"
    android:textColorHint="@color/white" />

</RelativeLayout>

