<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id"
        android:orientation="horizontal">

  <android.support.v7.widget.CardView
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:id="@+id/card"
      android:layout_margin="15dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image_view"
        />
  </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_margin="8dp"
            android:layout_toRightOf="@+id/card">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="ANTIQUE BANGLE"
                android:textAppearance="@style/heading"
                android:gravity="top"
                />


            <TextView
                android:id="@+id/sku"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/name"
                android:text="ANTIQUE BANGLE"
                android:textAppearance="@style/sku"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/weight"
                android:layout_below="@+id/sku">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/gross_weigh"
                android:textAppearance="@style/thin" />


            <TextView
                android:id="@+id/weight_t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="25.445"
                android:textAppearance="@style/thick" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:id="@+id/size"
                android:layout_below="@+id/weight">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weight"
                android:text="@string/sizelen"
                android:textAppearance="@style/thin" />


            <TextView
                android:id="@+id/size_t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="12"
                android:textAppearance="@style/thick" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/size">

            <TextView
                android:id="@+id/purity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/purity"
                android:textAppearance="@style/thin" />


            <TextView
                android:id="@+id/puri_t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="22"
                android:layout_weight="1"
                android:textAppearance="@style/thick"
                />

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_below="@+id/id"
            android:orientation="horizontal"

            >

            <Button
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:id="@+id/confrim"
                android:fontFamily="@font/catamaran"
                android:textColor="@color/white"
                android:text="CONFIRM"
                android:background="@color/skyBlue"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="15dp"

                />
            <Button
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/catamaran"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@color/whish"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:text="Cancel"
                android:id="@+id/cancel"
                android:layout_alignParentRight="true"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="15dp"

                />

        </LinearLayout>
</RelativeLayout>




